k8s-app-deployment/manifests/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
